--- a/.prettierrc
+++ b/.prettierrc
@@ -1,15 +1,5 @@
 {
-  "semi": true,
-  "trailingComma": "es5",
-  "singleQuote": false,
-  "printWidth": 80,
-  "tabWidth": 4,
-  "useTabs": false,
-  "bracketSpacing": true,
-  "bracketSameLine": false,
-  "arrowParens": "avoid",
-  "endOfLine": "lf",
-  "htmlWhitespaceSensitivity": "css",
-  "vueIndentScriptAndStyle": false,
-  "embeddedLanguageFormatting": "auto"
+    "printWidth": 120,
+    "htmlWhitespaceSensitivity": "ignore",
+    "vueIndentScriptAndStyle": false
 }
